2018-02-18  Araki Ken  <arakiken@users.sf.net>

	* README, doc/{ja,en}/README.win32: Updated.

	* sdl2/ui_display.c:
	  - XKeyEvent::str and XKeyEvent::parser are set in poll_event().
	  - ui_display_logical_to_physical_coordinates() applies the position
	    of SDL_Window.

	* sdl2/ui_window.c:
	  ui_window_get_str() processes XKeyEvent::str and XKeyEvent::parser.

	* sdl2/ui.h: str and parser are added to XKeyEvent.

	* im_fcitx.c: ui_im_status_screen is used on sdl2.

2018-02-17  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.win32: Updated.

	* mlimgloader/Makefile.in: LIBS2_sdl2_gdiplus is added.

	* mlconfig/Makefile.in: bindir=@bindir@ is added.

	* mlterm-menu/Makefile.in: Typo is fixed.

	* sdl2/ui.h: <SDL.h> => <SDL2/SDL.h> (for inputmethod/*)

	* configure.in:
	  - PKG_PATH_TOOL(pkg-config) => PKG_CHECK_TOOL(pkg-config)
	    (This makes it unnecessary to specify an absolute path.)
	  - "tr -d '\r'" is removed.
	  - MLIMGLOADER_LIBS=gdiplus if $have_gdiplus = "yes" but $gui != "win32"

2018-02-16  Araki Ken  <arakiken@users.sf.net>

	* libptyssh/vt_pty_ssh.c, vt_pty.h: vt_pty_ssh_set_pty_read_trigger()
	  is renamed to vt_pty_set_pty_read_trigger().

	* vt_pty_pipewin32.c: PostThreadMessage(main_tid, WM_APP, 0, 0) is replaced
	  by (*trigger_pty_read)().

	* main.c, win32/ui_display.c: main_tid = GetCurrentThreadID() is moved
	  from main() to ui_display_open().

2018-02-16  Araki Ken  <arakiken@users.sf.net>

	* README, README.ja: Updated.

	* doc/en/README.sdl2: Added.

	* */Makefile.in: Target, flags or library for SDL2 is added.

	* configure.in: --with-gui=sdl2 is supported.

	* uitoolkit/sdl2: Added.

	* vt_pty.h, vt_pty_ssh.c: vt_pty_ssh_set_pty_read_trigger() is added.

	* ui_display.h, win32/ui_display.c, sdl2/ui_display.c:
	  ui_display_trigger_pty_read() is added if USE_WIN32API is defined.

	* ui_draw_str.c: xcore_draw_str() supports SDL2.

	* fb/ui_window.c:
	  draw_string_intern() doesn't call ui_display_get_pixel() as possible